--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ section{
 {
     position: relative;
     min-height: 100vh;
-    background: #9c451c;
+    background: #f1cf5e;
 
     background-size: cover;
     background-position: right;
