--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,9 @@ section {
 }
 
 .banner {
-	padding-top: -50px;
 	position: relative;
 	min-height: 100vh;
-	background-image: url(../img/banner1.svg);
+	background-image: url(../img/banner.jpeg);
 
 	background-size: cover;
 	background-position: right;
