--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ section {
 .banner {
 	position: relative;
 	min-height: 100vh;
-	background-image: url(../img/banner.jpeg);
+	background-image: url(../img/Pastel\ Watercolor\ Art\ Quote\ Google\ Classroom\ Header\ \(2\).svg);
 
 	background-size: cover;
 	background-position: right;
